[gd_scene load_steps=3 format=3 uid="uid://b76sijlakmeru"]

[ext_resource type="Script" path="res://scripts/Order.gd" id="1_1satv"]
[ext_resource type="PackedScene" uid="uid://cr01aw28o3883" path="res://scenes/CircularTimer.tscn" id="2_6s2mv"]

[node name="Order" type="Control"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 40.0
script = ExtResource("1_1satv")

[node name="ItemImage" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="ItemName" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.116
anchor_right = 0.116
offset_left = 12.2
offset_right = 223.2
offset_bottom = 40.0
grow_horizontal = 2
vertical_alignment = 1

[node name="CircularTimer" parent="." instance=ExtResource("2_6s2mv")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -41.0
offset_right = 259.0
grow_horizontal = 0
scale = Vector2(0.133, 0.133)
